-----2.12 -----
New features:
	* [import]
		* Download datasets from kaggle.com
		* Support MCAP file import
	* [analysis]
		* Add possibility to do calculations on curves
	* [spreadsheet]
		* support periodic and random sampling as function: psample(n;x), rsample(x)
		* save the properties used to generate random values in the column for later re-use

Bug fixes:
	* Fix crash selecting "cell" from function list in function dialog
	* Properly draw the border line of the symbol in the legend (BUG 470792)

Internal:
	* use name LabPlot/labplot consistenly (renamed Labplot2/labplot2)


-----2.11.1 (16.07.2024) -----
Bug fixes:
	* Improve ODS support (selected platforms only)
	* Fixed the initial positioninig of the docks, should be put besides each other and not below
	* Don't try to restore the window size when starting for the first time, let the window manager do the initial size
	* Don't crash when opening a project which a hidden spreadsheet view
	* Fixed the background color of the sparklines in the spreadsheet
	* Fixed copy&paste and duplication of the matrix


-----2.11.0 (09.07.2024) -----
New features:
	* [general]
		* New application theme "Dracula"
		* New categorical color map "Dracula"
		* New option in the application settings to run a selected CAS engine at startup
		* New option in the application settings to control if the state of the dock widgets should be saved in the project file
		* Share the project via email, Nextcloud, etc. directly from the main menu
		* Allow to activate and deactivate the debug and performance tracing output in the terminal in the application settings
	* [worksheet]
		* Preview panel for all available worksheets in the project
		* Add possibility to use column labels as axis ticks
		* New visualization types:
			* Lollipop plot
			* Q-Q plot
			* KDE plot
		* Error bars for bar plots
		* New worksheet theme "Dracula"
		* Add possibility to lock elements for unintentional change in the plot