@@ -14,6 +14,7 @@
 #include "kdefrontend/spreadsheet/PlotDataDialog.h"
 #include "kdefrontend/spreadsheet/StatisticsDialog.h"
 
+#include <QActionGroup>
 #include <QHBoxLayout>
 #include <QLabel>
 #include <QMenu>
@@ -97,7 +98,7 @@ void CantorWorksheetView::initMenus() {
 
 	// markdown entry is only available if cantor was compiled with libdiscovery (cantor 18.12 and later)
 	QAction* insertMarkdownEntryAction = nullptr;
-	if (m_part->action("insert_markdown_entry")) {
+	if (m_part->action(QStringLiteral("insert_markdown_entry"))) {
 		insertMarkdownEntryAction = new QAction(QIcon::fromTheme(QLatin1String("text-x-markdown")), i18n("Markdown"), m_actionGroup);
 		insertMarkdownEntryAction->setData(QStringLiteral("insert_markdown_entry"));
 	}
@@ -119,43 +120,43 @@ void CantorWorksheetView::initMenus() {
 
 	// actions for "assistants", that are backend specific and not always available
 	QAction* computeEigenvectorsAction = nullptr;
-	if (m_part->action("eigenvectors_assistant")) {
+	if (m_part->action(QStringLiteral("eigenvectors_assistant"))) {
 		computeEigenvectorsAction = new QAction(i18n("Compute Eigenvectors"), m_actionGroup);
 		computeEigenvectorsAction->setData(QStringLiteral("eigenvectors_assistant"));
 	}
 
 	QAction* createMatrixAction = nullptr;
-	if (m_part->action("creatematrix_assistant")) {
+	if (m_part->action(QStringLiteral("creatematrix_assistant"))) {
 		createMatrixAction = new QAction(i18n("Create Matrix"), m_actionGroup);
 		createMatrixAction->setData(QStringLiteral("creatematrix_assistant"));
 	}
 
 	QAction* computeEigenvaluesAction = nullptr;
-	if (m_part->action("eigenvalues_assistant")) {
+	if (m_part->action(QStringLiteral("eigenvalues_assistant"))) {
 		computeEigenvaluesAction = new QAction(i18n("Compute Eigenvalues"), m_actionGroup);
 		computeEigenvaluesAction->setData(QStringLiteral("eigenvalues_assistant"));
 	}
 
 	QAction* invertMatrixAction = nullptr;
-	if (m_part->action("invertmatrix_assistant")) {
+	if (m_part->action(QStringLiteral("invertmatrix_assistant"))) {
 		invertMatrixAction = new QAction(i18n("Invert Matrix"), m_actionGroup);
 		invertMatrixAction->setData(QStringLiteral("invertmatrix_assistant"));
 	}
 
 	QAction* differentiationAction = nullptr;
-	if (m_part->action("differentiate_assistant")) {
+	if (m_part->action(QStringLiteral("differentiate_assistant"))) {
 		differentiationAction = new QAction(i18n("Differentiation"), m_actionGroup);
 		differentiationAction->setData(QStringLiteral("differentiate_assistant"));
 	}
 
 	QAction* integrationAction = nullptr;
-	if (m_part->action("integrate_assistant")) {
+	if (m_part->action(QStringLiteral("integrate_assistant"))) {
 		integrationAction = new QAction(i18n("Integration"), m_actionGroup);
 		integrationAction->setData(QStringLiteral("integrate_assistant"));
 	}
 
 	QAction* solveEquationsAction = nullptr;
-	if (m_part->action("solve_assistant")) {
+	if (m_part->action(QStringLiteral("solve_assistant"))) {
 		solveEquationsAction = new QAction(i18n("Solve Equations"), m_actionGroup);
 		solveEquationsAction->setData(QStringLiteral("solve_assistant"));
 	}
@@ -203,12 +204,12 @@ void CantorWorksheetView::initMenus() {
 	//"Notebook Settings"
 	m_settingsMenu = new QMenu(i18n("Settings"), m_part->widget());
 	m_settingsMenu->setIcon(QIcon::fromTheme(QLatin1String("settings-configure")));
-	m_settingsMenu->addAction(m_part->action("enable_expression_numbers"));
-	m_settingsMenu->addAction(m_part->action("enable_highlighting"));
-	m_settingsMenu->addAction(m_part->action("enable_completion"));
-	m_settingsMenu->addAction(m_part->action("enable_animations"));
+	m_settingsMenu->addAction(m_part->action(QStringLiteral("enable_expression_numbers")));
+	m_settingsMenu->addAction(m_part->action(QStringLiteral("enable_highlighting")));
+	m_settingsMenu->addAction(m_part->action(QStringLiteral("enable_completion")));
+	m_settingsMenu->addAction(m_part->action(QStringLiteral("enable_animations")));
 	m_settingsMenu->addSeparator();
-	m_settingsMenu->addAction(m_part->action("enable_typesetting"));
+	m_settingsMenu->addAction(m_part->action(QStringLiteral("enable_typesetting")));
 }
 
 /*!
@@ -243,9 +244,9 @@ void CantorWorksheetView::createContextMenu(QMenu* menu) {
 
 	// results related actions
 	menu->insertSeparator(firstAction);
-	menu->addAction(m_part->action("all_entries_collapse_results"));
-	menu->addAction(m_part->action("all_entries_uncollapse_results"));
-	menu->addAction(m_part->action("all_entries_remove_all_results"));
+	menu->addAction(m_part->action(QStringLiteral("all_entries_collapse_results")));
+	menu->addAction(m_part->action(QStringLiteral("all_entries_uncollapse_results")));
+	menu->addAction(m_part->action(QStringLiteral("all_entries_remove_all_results")));
 
 	// assistants, if available
 	if (m_linearAlgebraMenu || m_calculateMenu) {
@@ -322,7 +323,7 @@ void CantorWorksheetView::fillToolBar(QToolBar* toolbar) {
 void CantorWorksheetView::triggerAction(QAction* action) {
 	const auto& name = action->data().toString();
 	if (!name.isEmpty()) {
-		auto* action = m_part->action(name.toStdString().c_str());
+		auto* action = m_part->action(name);
 		if (action)
 			action->trigger();
 	}
